@@ -467,4 +467,72 @@ int SLPSubsetStringList(int listlen,
 }
 
 
-
+/*=========================================================================*/
+int SLPCheckServiceUrlSyntax(const char* srvurl,
+			     int srvurllen)
+/* Test if a service url conforms to accepted syntax
+ *
+ * srvurl -     (IN) service url string to check
+ *
+ * srvurllen -  (IN) length of srvurl in bytes
+ *
+ * Returns - zero if srvurl has acceptable syntax, non-zero on failure
+ *
+ *=========================================================================*/
+{
+    if(srvurllen < 8)
+    {
+        return 1;
+    }
+   
+    if(strncasecmp(srvurl,"service:",8))
+    {
+        return 1;
+    }        
+   
+    /* TODO: make this a little smarter */
+   
+    return 0;
+}
+ 
+ 
+/*=========================================================================*/
+int SLPCheckAttributeListSyntax(const char* attrlist,
+				int attrlistlen)
+/* Test if a service url conforms to accepted syntax
+ *
+ * attrlist -     (IN) attribute list string to check
+ *
+ * attrlistlen -  (IN) length of attrlist in bytes
+ *
+ * Returns - zero if srvurl has acceptable syntax, non-zero on failure
+ *
+ *=========================================================================*/
+{
+    const char* slider;
+    const char* end;
+   
+    if(attrlistlen)
+    {
+        slider = attrlist;
+        end = attrlist + attrlistlen;
+        while(slider != end)
+        {
+            if(*slider == '(')
+            {
+	        while(slider != end)
+	        {
+	            if(*slider == '=')
+	            {
+		        return 0;
+		    }
+		    slider++;
+	        }
+	    
+	        return 1;
+	    }
+	    slider++;
+	}
+    }    
+    return 0;
+}
